--- a/wordcount/templates/wordcount/count.html
+++ b/wordcount/templates/wordcount/count.html
@@ -1,23 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'wordcount/base.html' %}
+
+{% block count_content %}
+
+<div class = "container">
+
     <h1>당신이 입력한 텍스트는 {{total}}개 단어로 구성되어 있습니다.</h1>
 
-    <h1>입력한 텍스트 : </h1>
-    {{fulltext}}
-    <h1>단어 카운트 : </h1>
-    
+    <br>
+    <h1>입력한 텍스트</h1>
+    <br>
+    <p>{{fulltext}}</p>
+    <br><br>
+
+    <h1>단어 카운트</h1>
+    <br>
     {% for word, countTotal in dictionary %}
-    {{word}} - {{countTotal}}
+    {{word}} - {{countTotal}}(개)
     <br>
     {% endfor %}
+    <br><br>
 
     <a href = "{% url 'home' %}">다시하기</a>
-</body>
-</html>
+
+</div>
+
+{% endblock %}
