--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'new' %}">New</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'portfolio' %}">Portfolio</a>
+                    </li>
                   </ul>
                 </div>
               </nav>
@@ -42,5 +45,6 @@
     </div>
 
     {% endfor %}
+
 </body>
 </html>
