--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'new' %}">New</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'portfolio' %}">Portfolio</a>
+                    </li>
                   </ul>
                 </div>
               </nav>
