--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,34 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title>인근's Blog</title>
-</head>
-<body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'new' %}">New</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
+{% extends 'base.html' %}
 
-    {% for blog in blogs.all %}
+{% block home %}
+
+    {% for blog in posts %}
 
     <div style="border:1px solid darkslategrey; border-radius:12px; border-color:black;
                 margin-left : 30px ; margin-top:10px; padding:25px">
@@ -37,10 +11,28 @@
     <p>{{blog.title}}</p>
     <p>{{blog.pub_date}}</p>
     <p>{{blog.body}}</p>
+    <p>{{blog.summary}}<a href="{% url 'detail' blog.id %}">....more</a></p>
     <hr>
 
     </div>
 
     {% endfor %}
-</body>
-</html>
+
+    {%if posts.has_previous%}
+    <a href = "?page=1">First</a>
+    <a href = "?page={{posts.previous_page_number}}">Previous</a>
+
+    {%endif%}
+
+    <span>{{posts.number}}</span>
+    <span>of</span>
+    <span>{{posts.paginator.num_pages}}</span>
+
+    {%if posts.has_next %}
+
+    <a href = "?page={{posts.next_page_number}}">Next</a>
+    <a href = "?page={{posts.paginator.num_pages}}">Last</a>
+
+    {%endif%}
+
+{% endblock %}
