--- a/halligalli/templates/home.html
+++ b/halligalli/templates/home.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+    {% load staticfiles %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="gameproject/halligalli/templates/styles.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Staatliches&display=swap" rel="stylesheet">
+    <title>꿀잼할리갈리</title>
 </head>
-<body>
-    <h1>Welcome to 할리갈리 Game!</h1>
+<body background="http://currandaly.com/wp-content/uploads/2017/07/Web-Background-Green.png" style= "cursor:smile" > 
+<!-- 
+  <audio src="{% static 'fun.mp3' %} autoplay controls> -->
+  
+
+
+    <div align = "center" style="margin-top:120px; font-family:Staatliches">
+
+    <div class = "intro" >
+    
+  <img src= "http://www.halligalli-game.com/uploads/HalliGalli_Logo-300x135.png" style="width:400px; height:200px;">
+    
+  <div>
+
 
     <form action="{% url 'play_game' %}">
-        <input class="btn btn-secondary" type="submit" value="게임시작"/>
+        <input class="btn btn-primary" type="submit" value="Game Start" style="margin-top:50px; width: 400px; height: 60px;background-color:rgb(252,244,0); border-color: transparent; color: black; font-size: 30px;"  />
     </form>
     <br/>
-    
+
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">게임방법</button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" style="margin-top:10px; width: 400px; height: 60px;background-color:rgb(252,244,0); border-color: transparent; color: black; font-size: 30px;">How to Play </button>
       
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">게임 방법</h5>
+              <h5 class="modal-title" id="exampleModalLongTitle">How to Play</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -44,14 +63,14 @@
     <br/>
     <br/>
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter2">순 위</button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter2" style="margin-top:10px; width: 400px; height: 60px;background-color:rgb(252,244,0); border-color: transparent; color: black; font-size: 30px;">Rank</button>
       
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">순 위</h5>
+              <h5 class="modal-title" id="exampleModalLongTitle">Rank</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -65,6 +84,9 @@
           </div>
         </div>
       </div>
-
+    </div>
+      </div>
+    </div>
+  </audio>
 </body>
 </html>
